2016-11-25  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-3

	* R/functions.R (HTMLdecode): add complete list
	of entities

2016-11-24  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (HTMLdecode): add more entities

	* man/trim.Rd: remove mention of 'rmspace',
	which is no longer available; see ChangeLog of
	2016-03-31

2016-11-23  Enrico Schumann  <es@enricoschumann.net>

	* inst/unitTests/runTests.R: rewrite run script
	for unit tests; update unit tests

	* R/functions.R (pr_abbr): add outline of
	function 'pr_abbr' ("pretty abbreviate")

2016-10-17  Enrico Schumann  <es@enricoschumann.net>

	* NAMESPACE: import `utils::capture.output`

	* man/HTMLdecode.Rd: add man page

2016-09-15  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (HTMLdecode): add function

2016-06-14  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-2

	* R/functions.R (TeXunits): the function now
	works when both 'from' and 'to' are vectors

2016-06-14  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-1

	* NAMESPACE: document and export TeXunits

2016-06-13  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (TeXunits,.TeXunit.table): add
	remaining units from TeXBook

2016-03-31  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (rmspace): remove function -- use
	trim instead

2016-02-22  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.1-0

	* man/btable.Rd, latexrule.Rd: added files

2015-11-17  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.0-6

	* vignettes/tex_helpers.Rnw: added file

	* R/functions.R (btable): new function
	(latexrule): new function

2015-10-20  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (toHTML.text): new method

2015-10-15  Enrico Schumann  <es@enricoschumann.net>

	* NEWS: added file (empty; it only points to the ChangeLog)
