@@ -1,3 +1,12 @@
+2016-11-28  Enrico Schumann  <es@enricoschumann.net>
+
+	* man/spaces.Rd: add man page
+
+	* R/functions.R (spaces): rename 'nspace' to
+	'spaces' and export the function
+
+	* inst/unitTests/ut_text.R (test.spaces): add tests
+
 2016-11-25  Enrico Schumann  <es@enricoschumann.net>
 
         * DESCRIPTION (Version): 0.1-3
